Fix: prevent inputs jumping on SignUp (#302)

--- a/src/containers/SignUp/SignUp.pcss
+++ b/src/containers/SignUp/SignUp.pcss
@@ -21,6 +21,14 @@
       border-bottom: 2px solid var(--sign-in-text);
     }
 
+    &__form-content {
+      top: calc(var(--gap) * 14.8);
+    }
+
+    &__group {
+      margin-bottom: calc(var(--gap) * 3.1);
+    }
+
     &__option {
       background: var(--header);
       .__selected {
